# LegisTrack

./: LegisTrack.drawio  README.md
.github/workflows/: load_latest_diet.yml
crawler/: .gitignore  README.md  crawler.py  deliveration_status.py  pyproject.toml
crawler/notebook/: crawler_sample.ipynb
crawler/output/: sample.csv
crawler/src/: bill.py  cloud_storage_client.py  crawler.py  date_util.py  main.py  requirements.txt
data/: LegisTrack.drawio  bill_of_low_sample.csv
dbt/: dbt_project.yml
dbt/models/: README.md  latest_bill_of_lows.sql  latest_bill_timeline.sql  low_history.sql
