[tool.poetry]
name = "legis-track-crawler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "legis_track_crawler"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.31.0"
beautifulsoup4 = "4.12.3"
jupyterlab = "^4.1.8"
pandas = "2.2.2"
tqdm = "^4.66.2"
dbt-core = "^1.7.13"
dbt-bigquery = "^1.7.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
